--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
 
     <div>
         <p class="text-white py-2">
-            &copy; {{autor.nombre}}
+            &copy; {{author.name}} {{author.lastName}}
         </p>
     </div>
 
