--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
 <app-header></app-header>
 <div class="container">
-  <h1>Hola mundo!!!</h1>
-  <!-- <app-directiva></app-directiva> -->
-  <app-clientes></app-clientes>
+  <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
