--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -3,6 +3,10 @@
     <div class="card-body text-primary">
         <h5 class="card-title">Listado de Clientes</h5>
         
+        <div class="my-2 text-left">
+            <button class="btn btn-rounded btn-primary" type="button" [routerLink] 
+            = "['/clientes/form']">Crear Cliente</button>
+        </div>
         <table class="table table-hover">
             <thead>
                 <tr>
@@ -11,6 +15,8 @@
                     <th>Apellido</th>
                     <th>Email</th>
                     <th>Fecha</th>
+                    <th>Editar</th>
+                    <th>Eliminar</th>
                 </tr>
             </thead>
             <tbody>
@@ -20,6 +26,21 @@
                     <td>{{customer.lastName}}</td>
                     <td>{{customer.email}}</td>
                     <td>{{customer.createAt}}</td>
+                    <td>
+                        <button class="btn btn-primary" 
+                        type="button" 
+                        name="button" 
+                        [routerLink]="['/clientes/form', customer.id]"
+                        >Editar</button>
+                    </td>
+                    <td>
+                        <button 
+                        class="btn btn-danger" 
+                        type="button" 
+                        (click)="delete(customer)">
+                        Eliminar
+                        </button>
+                    </td>
                 </tr>
                 
             </tbody>
