--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,14 +1,17 @@
-<div class="card border-primary mb-3">
-    <div class="card-header">CLientes</div>
-    <div class="card-body text-primary">
-        <h5 class="card-title">Listado de Clientes</h5>
-        
+<div class="container">
+    <div class="card-body">
+        <h5 class="card-title text-primary">Listado de Clientes</h5>
         <div class="my-2 text-left">
-            <button class="btn btn-rounded btn-primary" type="button" [routerLink] 
-            = "['/clientes/form']">Crear Cliente</button>
+            <button class="btn btn-rounded btn-warning" type="button" [routerLink]="['/clientes/form']">
+                <fa-icon class="fa-lg" [icon]="faUserPlus"></fa-icon> Crear Cliente
+            </button>
         </div>
-        <table class="table table-hover">
-            <thead>
+        <div *ngIf="customers != undefined && customers.length == 0" class="alert alert-info">
+            No hay registros en la base de datos
+        </div>
+        <table class="table table-responsive-lg table-bordered table-striped"
+            *ngIf="customers != undefined && customers.length > 0">
+            <thead class="table-dark">
                 <tr>
                     <th>Id</th>
                     <th>Nombre</th>
@@ -27,24 +30,26 @@
                     <td>{{customer.email}}</td>
                     <td>{{customer.createAt}}</td>
                     <td>
-                        <button class="btn btn-primary" 
-                        type="button" 
-                        name="button" 
-                        [routerLink]="['/clientes/form', customer.id]"
-                        >Editar</button>
+                        <div class="d-flex align-items-center justify-content-center">
+                            <button class="btn btn-primary" type="button" name="button"
+                                [routerLink]="['/clientes/form', customer.id]">
+                                <fa-icon class="fa-lg" [icon]="faUserPen"></fa-icon>
+                            </button>
+                        </div>
+
                     </td>
                     <td>
-                        <button 
-                        class="btn btn-danger" 
-                        type="button" 
-                        (click)="delete(customer)">
-                        Eliminar
-                        </button>
+                        <div class="d-flex align-items-center justify-content-center">
+                            <button class="btn btn-danger" type="button" (click)="delete(customer)">
+                                <fa-icon class="fa-lg" [icon]="faTrash"></fa-icon>
+                            </button>
+                        </div>
+
                     </td>
                 </tr>
-                
+
             </tbody>
 
         </table>
     </div>
-</div>    
+</div>
