--- a/src/app/customer/form.component.html
+++ b/src/app/customer/form.component.html
@@ -1,48 +1,56 @@
-<div class="card bg-dark text-white">
+<div class="container d-flex align-items-center justify-content-center form-component my-container">
+    <div class="card bg-dark text-white card-form">
 
-    <div class="card-header">
-        {{title}}
-    </div>
-    <div class="card-body">
-
-        <form >
-            <div class="form-group row">
-                <label for="" class="col-form-label col-sm-2">Nombre</label>
-
-                <div class="col-sm-6">
-                    <input type="text" class="form-control" [(ngModel)] = "customer.name" name="name">
-                </div>
+        <div class="card-header text-center mt-3">
+            <div class="my-3">
+                <fa-icon class="fa-2xl" [icon]="faUser"></fa-icon>
             </div>
+            <h3>{{title}}</h3>
+            
+        </div>
+        <div class="card-body">
 
-            <div class="form-group row">
-                <label for="" class="col-form-label col-sm-2">Apellido</label>
+            <form>
+                <div class="form-group row my-4">
+                    <label for="" class="col-form-label col-sm-3">Nombre</label>
 
-                <div class="col-sm-6">
-                    <input class="form-control" type="text" [(ngModel)] = "customer.lastName" name="lastName">
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" [(ngModel)]="customer.name" name="name">
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group row">
-                <label for="" class="col-form-label col-sm-2">Email</label>
+                <div class="form-group row my-4">
+                    <label for="" class="col-form-label col-sm-3">Apellido</label>
 
-                <div class="col-sm-6">
-                    <input class="form-control" type="text" [(ngModel)] = "customer.email" name="email">
+                    <div class="col-sm-9">
+                        <input class="form-control" type="text" [(ngModel)]="customer.lastName" name="lastName">
+                    </div>
                 </div>
-            </div>
 
-            <div class="form-group row">
-                <div class="col-sm-6">
-                    <button class="btn btn-primary" role="button" (click)="create()"
-                    *ngIf="!customer.id else elseBLock">Crear</button>
+                <div class="form-group row my-4">
+                    <label for="" class="col-form-label col-sm-3">Email</label>
 
-                    <ng-template #elseBLock>
-                        <button class="btn btn-primary" role="button" (click)="update()">
-                            Actualizar
+                    <div class="col-sm-9">
+                        <input class="form-control" type="text" [(ngModel)]="customer.email" name="email">
+                    </div>
+                </div>
+
+                <div class="form-group row justify-content-center mt-5">
+                    <div class="col-8">
+                        <button class="btn btn-warning w-100" role="button" (click)="create()"
+                            *ngIf="!customer.id else elseBLock">
+                            Crear
                         </button>
-                    </ng-template>
-                </div>
-            </div>
 
-        </form>
+                        <ng-template #elseBLock>
+                            <button class="btn btn-warning text-white" role="button" (click)="update()">
+                                Actualizar
+                            </button>
+                        </ng-template>
+                    </div>
+                </div>
+
+            </form>
+        </div>
     </div>
 </div>
